Bug 120548 - FILEOPEN DOCX List created with Word loses the added font and background color in Writer
Summary: FILEOPEN DOCX List created with Word loses the added font and background colo...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2018-10-12 11:39 UTC by NISZ LibreOffice Team
Modified: 2020-05-15 13:56 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
A screenshot showcasing the issue. (435.68 KB, image/png)
2018-10-12 11:40 UTC, NISZ LibreOffice Team
Details
A minimal version of the document. (19.98 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-10-12 11:46 UTC, NISZ LibreOffice Team
Details
After the export (18.07 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-10-12 11:46 UTC, NISZ LibreOffice Team
Details
Original file from Word (19.58 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-11-13 16:27 UTC, Gabor Kelemen (Collabora)
Details
Exported version of the file (17.63 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-11-13 16:27 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2018-10-12 11:39:38 UTC
Description:
List in DOCX documents created with Microsoft Word 2010 loses the added font and background color when the document is opened in LibreOffice Writer.

Steps to Reproduce:
1. Create a new document in Microsoft Word.
2. Type “=lorem(3)” end press Enter
3. Press Backspace
4. Select All
5. Choose Bullets
6. Change the background and the font color
7. Save the file as DOCX
8. Open the same file in LibreOffice Writer and compare the two versions.

Actual Results:
The bullets are black without background color opened in Writer

Expected Results:
The bullets should have the same color like in the original file opened in Microsoft Word


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2018-10-12 11:40:08 UTC
Created attachment 145640 [details]
A screenshot showcasing the issue.
Comment 2 NISZ LibreOffice Team 2018-10-12 11:46:36 UTC
Created attachment 145644 [details]
A minimal version of the document.
Comment 3 NISZ LibreOffice Team 2018-10-12 11:46:51 UTC
Created attachment 145645 [details]
After the export
Comment 4 Xisco Faulí 2018-11-13 10:52:50 UTC
Hello,
Which MSO version are you using? for me, in MSO 2010 the bullet list doesn't have a background when I open the minimal version of the document. Am I missing something?
Comment 5 Gabor Kelemen (Collabora) 2018-11-13 16:27:22 UTC
Created attachment 146597 [details]
Original file from Word
Comment 6 Gabor Kelemen (Collabora) 2018-11-13 16:27:49 UTC
Created attachment 146598 [details]
Exported version of the file
Comment 7 Gabor Kelemen (Collabora) 2018-11-13 16:28:34 UTC
Sorry, we uploaded the wrong example files, but we still see the problem with current-ish LO master.
Comment 8 Dieter 2018-11-13 18:09:39 UTC
I opened file from comment 5 in MS Word and LO and could reproduce the bug

Version: 6.2.0.0.alpha1+ (x64)
Build ID: 8274c4c62df5b937b3f0bec9e1eeca85f3b219d4
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-22_01:47:50
Locale: en-US (de_DE); Calc: CL
Comment 9 Xisco Faulí 2018-11-14 11:29:15 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b2c1474c1dc93b69f0ede03fc5c9ab496c669955

author	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-20 11:02:45 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-20 11:46:59 +0100
commit b2c1474c1dc93b69f0ede03fc5c9ab496c669955 (patch)
tree 7f049ca2cdabad5e0fcf415e39e29f7f07ed3a5d
parent 96664bf0152ecf8ee64aa6b22ed399c1866117f1 (diff)
SwTxtNode::IsIgnoredCharFmtForNumbering: ignore RES_CHRATR_COLOR

Bisected with: bibisect-44max

Adding Cc: to Miklos Vajna
Comment 10 Miklos Vajna 2019-03-12 12:12:29 UTC
There are two separate problems here:

- font color, which is indeed a regression from the above commit
- background color, which seems to be a regression from commit aa02ed306f7c633bbffede16e44e8e736977ace4 (much more recent)

I don't know much about that highlighting stuff, so probably best to focus on the first problem in this bug and track the second one in a separate bug.
Comment 11 Commit Notification 2019-03-19 08:08:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/00ac19068de5e120d1620a719aa64f1203c639ae%5E%21

tdf#120548 sw ApplyParagraphMarkFormatToNumbering: fix handling of font color

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Gabor Kelemen (Collabora) 2019-03-19 09:31:51 UTC
(In reply to Miklos Vajna from comment #10)
> There are two separate problems here:
> 
> - font color, which is indeed a regression from the above commit
> - background color, which seems to be a regression from commit
> aa02ed306f7c633bbffede16e44e8e736977ace4 (much more recent)
> 
> I don't know much about that highlighting stuff, so probably best to focus
> on the first problem in this bug and track the second one in a separate bug.

Thanks for fixing this one!

About the background color related problem we already have bug #114799 so no need for a new one.
Comment 13 Xisco Faulí 2019-03-20 16:15:26 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: eb128a7d6bbc27b4dbbf9461c81c90e40203b114
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos Vajna, thanks for fixing this issue!

The other regression was already reported in bug 115689
Comment 14 Commit Notification 2019-03-22 11:25:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/6bbcf6e2839ef2747ec3677e5daa7a6ce118fd81%5E%21

tdf#120548 sw ApplyParagraphMarkFormatToNumbering: fix handling of font color

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.