tdf#120548 sw ApplyParagraphMarkFormatToNumbering: fix handling of font color

Regression from commit b2c1474c1dc93b69f0ede03fc5c9ab496c669955
(SwTxtNode::IsIgnoredCharFmtForNumbering: ignore RES_CHRATR_COLOR,
2014-11-20), where the problem was that unconditionally ignoring or not
ignoring the font color is not correct.

Re-examining the test document from the above commit, it has an explicit
font color set in the numbering, while this bugdoc doesn't have it.

So make applying the paragraph mark font color to the numbering
conditional if the numbering already has a color set, this makes both
cases work correctly.

Change-Id: I43a6dec7d3a77689e2acbdc9d3671e79a9c4cac8